export all row styles, fdo#46336

only exporting the used row styles is a loss of information since this
means that all following rows use the height of the default row style
 # Changes to be committed:

Signed-off-by: Kohei Yoshida <kohei.yoshida@suse.com>